# tinyapi

./: .gitignore  LICENSE  Makefile  README.md  __init__.py  __main__.py  app.py  db.py  errors.py  pyproject.toml  request.py  response.py  router.py  server.py  testclient.py
.github/workflows/: test.yml
examples/: tasks_api.py
tests/: test_app.py  test_db.py  test_http.py  test_router.py  test_server.py  test_tasks_api.py
