[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyapi"
version = "0.1.0"
description = "A zero-dependency REST API microframework on the Python stdlib (http.server + sqlite3): routing, middleware, JSON, and an in-process test client."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []   # zero third-party deps — pure stdlib

[project.scripts]
tinyapi = "tinyapi.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tinyapi*"]

[tool.setuptools.package-data]
tinyapi = ["py.typed"]
